--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,4 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import "./reset.css";
 @import "./common.css";
+
 
 /* @import '~antd/dist/antd.less'; */
